# playtui

./: .gitignore  Cargo.toml  LICENSE  README.md  project_backlog.md  theme.json
docs/: code-quality-tasks.md  development-guidelines.md  event-system.md  metrics-and-monitoring.md  ooda-based-development-guidelines.md  ooda-development-guide.md  play-feature-flow.md  playtui-description.md  preferences-specification.md  preferences-tasks.md  tasks.md  technical-implementation.md  theme-specification.md  ui-layout.md  workflow-and-best-practices.md
docs/journal/: dev-1.md  dev-10.md  dev-11.md  dev-12.md  dev-2.md  dev-3.md  dev-4.md  dev-5.md  dev-6.md  dev-7.md  dev-8.md  dev-9.md
examples/: colors_rgb.rs
src/: app.rs  audio.rs  files.rs  input_handler.rs  lib.rs  logger.rs  main.rs  preferences.rs  theme.rs  ui.rs
src/app/: areas.rs  components.rs  event_dispatch.rs  event_handling.rs  event_processing.rs  focus.rs  initialization.rs  lifecycle.rs  mod.rs  state.rs  tests.rs
src/audio/: mod.rs  player.rs  stream.rs
src/components/: controls.rs  current_track_info.rs  library_browser.rs  mod.rs  next_track.rs  now_playing.rs  play_pause.rs  playback_status.rs  playlist.rs  prev_track.rs  tests.rs  track_details.rs  track_list.rs  volume_control.rs
src/events/: actions.rs  error.rs  filter.rs  handler.rs  mod.rs  types.rs
src/metadata/: cache.rs  mod.rs  parser.rs  tests.rs
test/: testaudio-short.flac
tests/: audio_test_utils.rs  component_integration.rs
themes/: cobalt.json  copper.json  dark.json  default.json  light.json  monokai.json
(+76 files in other folders)
