[package]
name = "playtui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"  # Required for terminal manipulation
rodio = "0.17.3"
id3 = "1.0.0"
walkdir = "2.4.0"
log = "0.4.20"
env_logger = "0.10.1"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
css-colors = "1.0.1"
