[package]
name = "playtui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
anyhow = "1.0.75"
id3 = "1.8.0"
metaflac = "0.2"
lewton = "0.10"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8.0"
